objects/Fixed_Service_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Fee_Excl_VAT__c</fullName>
        <label>Fee (Excl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Service__c</fullName>
        <label>Fixed Service</label>
        <referenceTo>Fixed_Service__c</referenceTo>
        <relationshipLabel>Fixed Service Costs</relationshipLabel>
        <relationshipName>Fixed_Service_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fixed Service Cost</label>
    <nameField>
        <displayFormat>FSC-{00000}</displayFormat>
        <label>Fixed Service Cost #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Service Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>